engine/codex-rs/tui/src/tui/snapshots/codex_tui__tui__scrollback__tests__standard_viewport_growth_3.snap
---
source: tui/src/tui/scrollback_tests.rs
expression: screen.contents()
---
history-4



composer-1
composer-2
